--- a/project/www/index.html
+++ b/project/www/index.html
@@ -21,7 +21,7 @@
     <div class="right">
         <ul>
             <li>
-                <a href="/demo.html">Hello World!</a>
+                <a href="demo/demo.html">Hello World!</a>
             </li>
         </ul>
     </div>
