Fix readFile to correctly format binary file

--- a/project/www/test/get.html
+++ b/project/www/test/get.html
@@ -35,8 +35,14 @@
         <p>
             Cette image est affichée grâce à la directive <code>autoindex</code> du fichier de configuration <code>webserv.conf</code>.
         </p>
-        <img src="http://127.0.0.1:4242/img/42-logo.png"
-             alt="42logo" height="150" width="150" />
+    </section>
+    <section class="container">
+        <p>
+            l'image est disponible à l'adresse suivante : <code>http://[serveur:port]/img/42-logo.png</code>
+        </p>
+        <br>
+        <img src="../img/42-logo.png"
+             alt="42logo" height="305" width="512"/>
     </section>
 </main>
 
