--- a/project/www/test/post.html
+++ b/project/www/test/post.html
@@ -25,7 +25,7 @@
 
 <main>
     <div class="container">
-        <form action="/">
+        <form action="../status/success.html" method="post">
             <div class="form-fields">
                 <label for="name">Nom du fichier:</label>
                 <input type="text" id="name" name="name" />
