Improve redirection && test multiple location in conf file

--- a/project/www/index.html
+++ b/project/www/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Webserve</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/site.webmanifest">
-    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#373e3e">
+    <link rel="apple-touch-icon" sizes="180x180" href="public/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="public/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="public/favicon/favicon-16x16.png">
+    <link rel="manifest" href="public/favicon/site.webmanifest">
+    <link rel="mask-icon" href="public/favicon/safari-pinned-tab.svg" color="#373e3e">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="stylesheets/main.css">
+    <link rel="stylesheet" href="src/stylesheets/main.css">
 </head>
 <body>
 
@@ -48,20 +48,20 @@
         <ul>
             <li>
                 <p class="text-info">
-                    <a href="test/get.html">GET</a><br/> Est utilisé pour récupérer des informations à partir du serveur
+                    <a href="methods/get.html">GET</a><br/> Est utilisé pour récupérer des informations à partir du serveur
                     donné en utilisant un URI donné. Les requêtes utilisant GET ne doivent récupérer que des données et
                     n'ont aucun autre effet sur les données.
                 </p>
             </li>
             <li>
                 <p class="text-info">
-                    <a href="test/post.html">POST</a><br/> Est utilisé pour envoyer des données au serveur, par exemple,
+                    <a href="methods/post.html">POST</a><br/> Est utilisé pour envoyer des données au serveur, par exemple,
                     des informations sur les clients, le téléchargement de fichiers, etc. à l'aide de formulaires HTML.
                 </p>
             </li>
             <li>
                 <p class="text-info">
-                    <a href="test/delete.html">DELETE</a><br/> Est utilisé pour supprimer la ressource spécifiée.
+                    <a href="methods/delete.html">DELETE</a><br/> Est utilisé pour supprimer la ressource spécifiée.
                 </p>
             </li>
         </ul>
