--- a/project/www/methods/delete.html
+++ b/project/www/methods/delete.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <title>Webserv - DELETE</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
-    <link rel="manifest" href="../favicon/site.webmanifest">
-    <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#373e3e">
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/public/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/public/favicon/safari-pinned-tab.svg" color="#373e3e">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="../stylesheets/main.css" />
+    <link rel="stylesheet" href="/src/stylesheets/main.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 <header>
     <div class="container">
         <h1 class="uppercase">
-            <a href="../index.html">Webserv - DELETE</a>
+            <a href="/index.html">Webserv - DELETE</a>
         </h1>
     </div>
 </header>
