--- a/project/www/index.html
+++ b/project/www/index.html
@@ -39,29 +39,28 @@
 
             <br/>Pour cela, le protocole HTTP propose des cookies.
         </p>
-        </p>
         <p>
-            Ceci est une page de test pour le projet Webserv. les tests suivants sont disponibles :
+            Ceci est une page de test pour le projet Webserv. Les tests suivants sont disponibles :
         </p>
     </section>
     <section class="container">
         <ul>
             <li>
                 <p class="text-info">
-                    <a href="methods/get.html">GET</a><br/> Est utilisé pour récupérer des informations à partir du serveur
+                    <a href="/methods/get.html" class="blue">GET</a><br/> Est utilisé pour récupérer des informations à partir du serveur
                     donné en utilisant un URI donné. Les requêtes utilisant GET ne doivent récupérer que des données et
                     n'ont aucun autre effet sur les données.
                 </p>
             </li>
             <li>
                 <p class="text-info">
-                    <a href="methods/post.html">POST</a><br/> Est utilisé pour envoyer des données au serveur, par exemple,
+                    <a href="/methods/post.html" class="green">POST</a><br/> Est utilisé pour envoyer des données au serveur, par exemple,
                     des informations sur les clients, le téléchargement de fichiers, etc. à l'aide de formulaires HTML.
                 </p>
             </li>
             <li>
                 <p class="text-info">
-                    <a href="methods/delete.html">DELETE</a><br/> Est utilisé pour supprimer la ressource spécifiée.
+                    <a href="/methods/delete.html" class="red">DELETE</a><br/> Est utilisé pour supprimer la ressource spécifiée.
                 </p>
             </li>
         </ul>
