--- a/project/www/success.html
+++ b/project/www/success.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8" />
-    <title>Webserv - DELETE</title>
+    <title>Webserv - Submition succeed</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/public/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon/favicon-16x16.png">
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="/src/stylesheets/main.css">
 </head>
 
-<body class="delete-page">
+<body class="success-page">
 
 <header>
     <div class="container grid">
         <h1 class="uppercase">
-            <a href="/index.html">Webserv - DELETE</a>
+            <a href="/index.html">Webserv - Success</a>
         </h1>
         <ul class="ul-inline">
             <li><a href="/methods/get.html">Get</a></li>
@@ -29,7 +29,10 @@
 </header>
 
 <main>
-
+    <section class="container">
+        <h2>Submition succeed</h2>
+        <p>File uploaded successfully.</p>
+    </section>
 </main>
 
 <footer>
