--- a/project/www/error/403.html
+++ b/project/www/error/403.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Webserv - Error 404</title>
+  <title>Webserv - Error 403</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/public/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon/favicon-16x16.png">
@@ -13,20 +13,25 @@
   <link rel="stylesheet" href="/src/stylesheets/main.css" />
 </head>
 
-<body>
+<body class="error-page">
 
 <header>
-  <div class="container">
+  <div class="container grid">
     <h1 class="uppercase">
-      <a href="/index.html">Webserv - Error 404</a>
+      <a href="/index.html">Webserv - Error 403</a>
     </h1>
+    <ul class="ul-inline">
+      <li><a href="/methods/get.html">Get</a></li>
+      <li><a href="/methods/post.html">Post</a></li>
+      <li><a href="/methods/delete.html">Delete</a></li>
+    </ul>
   </div>
 </header>
 
 <main>
   <section class="container">
-    <h2>404 - Not Found</h2>
-    <p>The requested resource could not be found but may be available again in the future.</p>
+    <h2>403 - Forbidden</h2>
+    <p>You do not have permission to access this resource.</p>
   </section>
 </main>
 
