--- a/project/www/methods/get.html
+++ b/project/www/methods/get.html
@@ -13,13 +13,18 @@
     <link rel="stylesheet" href="/src/stylesheets/main.css">
 </head>
 
-<body>
+<body class="get-page">
 
 <header>
-    <div class="container">
+    <div class="container grid">
         <h1 class="uppercase">
             <a href="/index.html">Webserv - GET</a>
         </h1>
+        <ul class="ul-inline">
+            <li><a href="/methods/get.html">Get</a></li>
+            <li><a href="/methods/post.html">Post</a></li>
+            <li><a href="/methods/delete.html">Delete</a></li>
+        </ul>
     </div>
 </header>
 
