--- a/project/www/error/405.html
+++ b/project/www/error/405.html
@@ -30,7 +30,9 @@
 
 <main>
   <section class="container">
-    <h2>405</h2></section>
+    <h2 class="uppercase">Error 405</h2>
+    <p>Method not allowed</p>
+  </section>
 </main>
 
 <footer>
