--- a/project/www/methods/get.html
+++ b/project/www/methods/get.html
@@ -43,7 +43,7 @@
     </section>
     <section class="container">
         <p>
-            l'image est disponible à l'adresse suivante : <code>http://[serveur:port]/ima/42-logo.png</code>
+            l'image est disponible à l'adresse suivante : <code>http://[serveur:port]/src/img/42-logo.png</code>
         </p>
         <br>
         <img src="/images/42-logo.png"
