add: cgi ref to main page

--- a/project/www/index.html
+++ b/project/www/index.html
@@ -63,6 +63,11 @@
                     <a href="/methods/delete.html" class="red">DELETE</a><br/> Est utilisé pour supprimer la ressource spécifiée.
                 </p>
             </li>
+            <li>
+                <p class="text-info">
+                    <a href="/index.php" class="yellow">CGI - PHP</a><br/> Est utilisé pour interpreter des pages php.
+                </p>
+            </li>
         </ul>
     </section>
 </main>
