--- a/project/www/methods/get.html
+++ b/project/www/methods/get.html
@@ -24,6 +24,7 @@
             <li><a href="/methods/get.html">Get</a></li>
             <li><a href="/methods/post.html">Post</a></li>
             <li><a href="/methods/delete.html">Delete</a></li>
+            <li><a href="/index.php">CGI</a></li>
         </ul>
     </div>
 </header>
