--- a/project/www/index.html
+++ b/project/www/index.html
@@ -65,7 +65,7 @@
             </li>
             <li>
                 <p class="text-info">
-                    <a href="/index.php" class="php">CGI - PHP</a><br/> Est utilisé pour interpreter des pages php.
+                    <a href="/php/index.php" class="php">CGI - PHP</a><br/> Est utilisé pour interpreter des pages php.
                 </p>
             </li>
         </ul>
