--- a/project/www/success.html
+++ b/project/www/success.html
@@ -24,6 +24,7 @@
             <li><a href="/methods/get.html">Get</a></li>
             <li><a href="/methods/post.html">Post</a></li>
             <li><a href="/methods/delete.html">Delete</a></li>
+            <li><a href="/php/index.php">CGI</a></li>
         </ul>
     </div>
 </header>
@@ -31,7 +32,6 @@
 <main>
     <section class="container">
         <h2>Submition succeed</h2>
-        <p>File uploaded successfully.</p>
     </section>
 </main>
 
