fix(cgi): refacto buildResponse()

--- a/project/www/error/301.html
+++ b/project/www/error/301.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Webserv - Error 301</title>
+  <title>Webserv - 301</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/public/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon/favicon-16x16.png">
@@ -18,7 +18,7 @@
 <header>
   <div class="container grid">
     <h1 class="uppercase">
-      <a href="/index.html">Webserv - Error 301</a>
+      <a href="/index.html">Webserv - 301</a>
     </h1>
     <ul class="ul-inline">
       <li><a href="/methods/get.html">Get</a></li>
