--- a/project/www/methods/delete.html
+++ b/project/www/methods/delete.html
@@ -30,7 +30,9 @@
 </header>
 
 <main>
-
+    <div class="container">
+        <p>Try to delete <code>deleteme.txt</code> me with curl: <code>curl -X DELETE http://127.0.0.1:4242/test/deleteme.txt</code></p>
+    </div>
 </main>
 
 <footer>
