change upload.php(mise en page) and calculatrice.php(color) + delete r_buffer for opti

--- a/project/www/methods/post.html
+++ b/project/www/methods/post.html
@@ -25,6 +25,7 @@
             <li><a href="/methods/post.html">Post</a></li>
             <li><a href="/methods/delete.html">Delete</a></li>
             <li><a href="/php/index.php">CGI</a></li>
+            <li><a href="/uploads">UPLOADS</a></li>
         </ul>
     </div>
 </header>
